Fix mobile scale control cache and spacing

--- a/mobile/www/style.css
+++ b/mobile/www/style.css
@@ -2210,7 +2210,7 @@ body.panel-resizing * {
     }
 
     .leaflet-control-scale {
-        margin-right: calc(92px + env(safe-area-inset-right, 0px)) !important;
+        margin-right: calc(152px + env(safe-area-inset-right, 0px)) !important;
         margin-bottom: calc(24px + env(safe-area-inset-bottom, 0px)) !important;
     }
 
